...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />

    <EditText
        android:id="@+id/nameInputSharedPreferences"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/roundededittext"
        android:ems="10"
        android:hint="@string/name"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />

    <Button
        android:id="@+id/saveNameSharedPreferences"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
...
